# Tarrif_Shock-EWS

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: aluminum.yaml  steel.yaml
docs/: Tariff_Shock_EWS_Solution_Design.xlsx
notebooks/: 01_case_study_steel.ipynb
outputs/: step10_gamma_sweep.json  step1_summary.json  step2_summary.json  step3_gaps_summary.json  step4_hrc_summary.json  step5_forward_eval.json  step6_announcement_summary.json  step7_alert_precision.json  step8_covariates_eval.json  step9_aluminum_validation.json
outputs/alerts/: aluminum_20260711.json  aluminum_20260712.json  steel_20260711.json  steel_20260712.json
scripts/: run_daily.bat  step10_gamma_sweep.py  step1_forecast_slx.py  step2_events_attribution.py  step3_close_gaps.py  step4_hrc_attribution.py  step5_forward_eval.py  step6_announcement_attribution.py  step7_alert_precision.py  step8_covariates_eval.py  step9_aluminum_validation.py
src/: __init__.py  pipeline.py
src/data/: __init__.py  events.py  news_gdelt.py  news_tpu.py  prices.py  trade.py
src/detect/: __init__.py  changepoint.py
src/eval/: __init__.py  backtest.py  event_eval.py
src/events/: __init__.py  attribute.py  embed.py  severity.py
src/forecast/: __init__.py  chronos_model.py  conformal.py  timesfm_model.py  timesfm_xreg.py
tests/: test_band_cache.py  test_conformal.py  test_eval_and_delivery.py  test_events.py
tools/: build_design_doc.py
